--- a/index.html
+++ b/index.html
@@ -324,6 +324,20 @@
             </ul>
             </p>
           </div>
+    
+          <div class="resume-item">
+            <h4>CCTV Technician &amp; Stock Admin</h4>
+            <h5>2022</h5>
+            <p><em>MC CCTV, Medan, Sumatera Utara</em></p>
+            <p>
+            <ul>
+              <li>new cctv installation</li>
+              <li>service cctv</li>
+              <li>expand wifi area</li>
+              <li> Observing incoming and outgoing stock of goods using the FIFO method</li>
+            </ul>
+            </p>
+          </div>
           
         </div>
       </div>
