--- a/index.html
+++ b/index.html
@@ -326,15 +326,15 @@
           </div>
     
           <div class="resume-item">
-            <h4>CCTV Technician &amp; Stock Admin</h4>
-            <h5>2022</h5>
-            <p><em>MC CCTV, Medan, Sumatera Utara</em></p>
+            <h4>Admin BIRO</h4>
+            <h5>2022-2023</h5>
+            <p><em>PT. PRABU BENZEMA ABADI(PBA), Medan, Sumatera Utara</em></p>
             <p>
             <ul>
-              <li>new cctv installation</li>
-              <li>service cctv</li>
-              <li>expand wifi area</li>
-              <li> Observing incoming and outgoing stock of goods using the FIFO method</li>
+              <li>manajemen system</li>
+              <li>SDM supervision</li>
+              <li>SDM recruiting to production</li>
+              <li>as connection between production departemen with headquarter</li>
             </ul>
             </p>
           </div>
